// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Divider /> should render divider with left and right 1`] = `
<View
  pad={true}
  row={true}
  style={
    Object {
      "backgroundColor": "#ebebea",
      "flex": 1,
      "flexDirection": "row",
      "paddingHorizontal": 15,
      "paddingVertical": 8,
    }
  }
  tertiary={true}
>
  <View
    left={true}
    style={
      Object {
        "alignItems": "flex-start",
        "flex": 1,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Test Text
    </Text>
  </View>
</View>
`;

exports[`<Divider /> should render only right, if only right child is provided 1`] = `
<View
  pad={true}
  row={true}
  style={
    Object {
      "backgroundColor": "#ebebea",
      "flex": 1,
      "flexDirection": "row",
      "paddingHorizontal": 15,
      "paddingVertical": 8,
    }
  }
  tertiary={true}
>
  <View
    right={true}
    style={
      Object {
        "alignItems": "flex-end",
        "flex": 1,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Right
    </Text>
  </View>
</View>
`;
